--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Questions and answers -- Periodicals'
 - !lcc 'AG'
+- GITenberg
 title: "Notes and Queries, Vol. III, Number 86, June 21, 1851\r\nA Medium of Inter-communication\
   \ for Literary Men, Artists, Antiquaries, Genealogists, etc."
 url: http://www.gutenberg.org/ebooks/37496
